css/main-page-mobile.css
*,
*::before,
*::after{
	box-sizing: border-box;
}

body{
	margin: 0;
}
:root{
	--header-main:2.7rem;
	--main-heading-font-size: clamp(2.6rem, 5vw + 1rem, 3.75rem);
	--subheading1-font-size: clamp(1.25rem, 2vw + 1rem, 1.875rem);
	--score-font-size: clamp(1.5625rem, 5vw + 1rem, 2.5rem);
	--weapon-font-size: clamp(1.25rem, 5vw + 1rem, 2.5rem);
  }

.protest-strike-regular {
	font-family: "Protest Strike", serif;
	font-weight: 400;
	font-style: normal;
  }

.main-header{
    font-size: var(--main-heading-font-size);
	text-align: center;
}

.subheading-1{
	font-size: var(--subheading1-font-size);
	text-align: center;
}

.humanScoreContainer{
	display: inline-flex;
	margin: 0;
	padding:0;
	/*padding-inline: clamp(10vw, 5vw + 1rem, 10rem);*/
}

.humanScore{
	font-size: var(--score-font-size);
	padding-inline: clamp(10vw, 5vw + 1rem, 10rem);
	margin-top: 0;

}

.score{
	text-align: center;
	padding-inline-start: clamp(1vw, 2.5vw + 1rem, 5rem);
}

.twocolumn {
	flex: 10;
	flex-basis: 25%; 
	box-sizing: border-box;
  }

figure{
	margin:0;
}

figcaption{
	font-size: var(--weapon-font-size);
}

.Astronaut{
	max-width:100%;
	max-height:100%;
	width: min(100vw,10rem);
	height: min(60vw,13rem);
}

.humanWeapon{
	max-width:100%;
	max-height:100%;
	width: min(100vw,10.8125rem);
	height: min(60vw,9.875rem);
}

.Alien{
	max-width:100%;
	max-height:100%;
	width: min(100vw,9rem);
	height: min(60vw,10rem);
}

.alienWeapon{
	max-width:100%;
	max-height:100%;
	width: min(100vw,10.8125rem);
	height: min(60vw,13rem);
	padding-block-start: 2rem;
}

